Bug 438238 - Selecting 'None' in stroke panel reverts back to 'Solid'
Summary: Selecting 'None' in stroke panel reverts back to 'Solid'
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layers/Vector (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Compiled Sources All
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-06-08 10:42 UTC by acc4commissions
Modified: 2021-06-11 13:30 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description acc4commissions 2021-06-08 10:42:45 UTC
SUMMARY
git c75c77d 5.0 alpha

It seems only a cosmetical problem. 

STEPS TO REPRODUCE
1. Create a vector object. 
2. Select 'Solid' or 'Gradient' in Stroke tab
3. Try to select 'None' after that.

OBSERVED RESULT
It reverts back to 'Solid'

EXPECTED RESULT
It should select 'None'

SOFTWARE/OS VERSIONS
Windows: Win10
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Ahab Greybeard 2021-06-08 14:47:28 UTC
I don't see this with the Jun 07 5.0.0-prealpha (git dba5ce5) appimage on Debian 10.

I can select the Stroke to be Solid, Gradient or None and swap between them in any order.
Comment 2 acc4commissions 2021-06-08 15:42:45 UTC
(In reply to Ahab Greybeard from comment #1)
> I don't see this with the Jun 07 5.0.0-prealpha (git dba5ce5) appimage on
> Debian 10.
> 
> I can select the Stroke to be Solid, Gradient or None and swap between them
> in any order.

I tested with the latest one. I CAN select them and apply the effcts to the object, but the buttons in tool options say otherwise.
Comment 3 Ahab Greybeard 2021-06-08 15:52:41 UTC
You're right. I didn't pay attention to the state of the button, only its effect.

Setting to Confirmed.
It doesn't happen with the 4.4.3 appimage hence regression.
Comment 4 sh_zam 2021-06-11 13:30:27 UTC
Git commit 1b19d169ad9768e56473f9d5e7012d66545c3e2c by Sharaf Zaman.
Committed on 11/06/2021 at 13:29.
Pushed by szaman into branch 'master'.

Bugfix: Unable to select None in FillConfigWidget

M  +4    -4    libs/flake/KoShapeFillWrapper.cpp
M  +1    -1    libs/flake/KoShapeStroke.cpp
M  +0    -7    libs/ui/widgets/KoFillConfigWidget.cpp

https://invent.kde.org/graphics/krita/commit/1b19d169ad9768e56473f9d5e7012d66545c3e2c