Bugfix: Unable to select None in FillConfigWidget

BUG:438238