libs/ui/widgets/KoFillConfigWidget.cpp
@@ -518,13 +518,6 @@ void KoFillConfigWidget::noColorSelected()
         d->canvas->addCommand(command);
     }
 
-    if (d->fillVariant == KoFlake::StrokeFill) {
-        KUndo2Command *lineCommand = wrapper.setColor(Qt::transparent);
-        if (lineCommand) {
-            d->canvas->addCommand(lineCommand);
-        }
-    }
-
     emit sigFillChanged();
 }
 
